--- a/style.css
+++ b/style.css
@@ -21,6 +21,9 @@ body{
 .display-flex{
     display: flex;
 }
+.font-color-dark1{
+    color: #131313;
+}
 .font-color-dark2{
     color: #424242;
 }
@@ -35,7 +38,7 @@ body{
 .nav-container{
     justify-content: space-between;
     align-items: center;
-    max-width: 1440px;
+    max-width: 1300px;
     margin: 0 auto;
     
 }
@@ -97,4 +100,125 @@ header img{
         
     }
 
-    
+    /* style for section */
+    section{
+        max-width: 1300px;
+        margin: 0 auto;
+        margin-top: 7rem;
+        text-align: left ;
+
+    }
+
+    .team-container{
+        align-items: center;
+    }
+
+    .team-image{
+        display: grid;
+        grid-template-columns: repeat(2,1fr);
+        gap: 0.8rem;
+        
+    } 
+   
+
+    .team-intro{
+        margin-left: 2rem;
+    }
+
+    .team-title{
+        max-width: 470px;
+        /* text-align: left; */
+    }
+
+    #quic-list{
+        font-size: 2.8rem;
+        font-weight: 500;
+         color: #727272;
+    }
+    .of-our{
+        font-size: 2.8rem;
+        font-weight: 700;
+        color: #131313;
+    }
+    .feature{
+        font-size: 2.8rem;
+        font-weight: 700;
+        color: #FF900E;
+    }
+
+    @media screen and (max-width:576px){
+        .team-image{
+             grid-template-columns: repeat(1,1fr);
+        }
+         .team-container{
+            flex-direction: column;
+        }
+    }
+
+    @media screen and (min-width:576px) and (max-width:992px){
+        .team-container{
+            flex-direction: column;
+        }
+    }
+
+
+    /* facts and card style */
+
+    .fact-container h3{
+        font-size: 2.8rem;
+        font-weight: 700;
+        color: #131313;
+        margin-bottom: 15px;
+    }
+    .fact-container p{
+        padding-top: 0px;
+        margin-top: 0;
+    }
+
+    .card-container{
+        display: grid;
+        grid-template-columns: repeat(4,1fr);
+        margin-top: 3rem;
+    }
+    .card{
+        border: 1px solid #FF900E;
+        height: 240px;
+        width: 240px;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        border-radius: 8px;
+    }
+    .card img{
+        height: 45px;
+        width: 45px;
+    }
+    .card .card-number{
+        height: 53;
+        font-size: 1.8rem;
+        font-weight: 600;
+        margin-bottom: 5px;
+    }
+    .card .card-value{
+        margin-top: 5px;
+        font-size: 1.1rem;
+        font-weight: 600;
+        color: #727272;
+    }
+
+    @media screen and (max-width:576px) {
+        .card-container{
+            grid-template-columns: repeat(1,1fr);
+            margin-left: 100px;
+            gap: 10px;
+        }
+    }
+
+     @media screen and (min-width:576px) and (max-width:992px) {
+        .card-container{
+            grid-template-columns: repeat(2,1fr);
+            margin-left: 30px;
+            gap: 10px;
+        }
+    }
