--- a/style.css
+++ b/style.css
@@ -160,6 +160,91 @@ header img{
             flex-direction: column;
         }
     }
+    /* style for feature */
+
+
+    .company-features{
+        display: flex;
+    }
+
+    .company-feature-title{
+        max-width: 560px;
+        font-size: 2.8rem;
+        font-weight: 700;
+        margin-bottom: 20px;
+    }
+
+    .company-feature-description{
+        margin-top: 0;
+        margin-bottom: 60px;
+    }
+
+    .feature-card{
+        max-width: 585px;
+        box-shadow: 0 4px 30px 0 rgba(0, 0, 0, 0.06);
+    }
+    .feature-card-title{
+        font-size: 1.2rem;
+        font-weight: 600;
+        margin-bottom: 0;
+    }
+    .company-feature-list{
+        width: 50%;
+    }
+    .architect-image{
+        width: 50%;
+        height: auto;
+    }
+    
+
+    .architect-image img{
+        width: 100%;
+        height: 90%;
+    }
+    .architect-image button{
+        border: none;
+        padding: 10px;
+        background-color: #FF900E;
+        color: white;
+        margin-top: -100px;
+        margin-left: -100px;
+        border-radius: 8px;
+    }
+
+    #but1{
+        font-size: 4rem;
+        font-weight: 700;
+        
+       
+    }
+    #but2{
+        font-size: 1.5rem;
+        font-weight: 600;
+    }
+
+    @media screen and (max-width:576px) {
+        .company-features{
+            flex-direction: column;
+            align-items: center;
+        }
+        .architect-image button{
+            margin-top:20px;
+            margin-left: 0;
+        }
+
+    }
+
+    @media screen and (min-width:576px) and (max-width:992px){
+        .company-features{
+            flex-direction: column;
+            align-items: center;
+        }
+        .architect-image button{
+            margin-top:20px;
+            margin-left: 0;
+        }
+
+    }
 
 
     /* facts and card style */
@@ -221,4 +306,53 @@ header img{
             margin-left: 30px;
             gap: 10px;
         }
+    }
+
+
+
+    /* sponsor style */
+
+    .sponsor-info{
+        max-width: 550px;
+        margin: 0 auto;
+        text-align: center;
+    }
+    .sponsor-info-title{
+        font-size: 2.8rem;
+        font-weight: 700;
+        color: #131313;
+        margin-bottom: 0;
+    }
+
+    .sponsor-image{
+        display: grid;
+        grid-template-columns: repeat(5,1fr);
+        margin-top: 5rem;
+        filter: grayscale(100%);
+    }
+
+    @media screen and (max-width:576px) {
+        .sponsor-image{
+            grid-template-columns: repeat(2,1fr);
+            gap: 20px;
+            margin-left: 10px;
+        }
+        
+    }
+
+    @media screen and (min-width:576px) and (max-width:992px) {
+            .sponsor-image{
+                grid-template-columns: repeat(3,1fr);
+                margin-left: 10px;
+            }        
+    }
+
+
+
+    /* style for footer */
+
+    footer{
+        max-width: 1300px;
+        margin: 100px auto;
+        padding: 25px;
     }
